src/main/default/objects/Bot__c/Bot__c.object-meta.xml
<CustomObject>
    <description>Stores details of a bot instance</description>
    <label>Bot</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>