src/main/default/objects/Bot__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>Apex class that will be called if the bot receives an update</description>
    <externalId>true</externalId>
    <inlineHelpText>Apex class name</inlineHelpText>
    <label>Handler</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>