src/main/default/objects/Bot__c/fields/NotifyOnError__c.field-meta.xml
<CustomField>
    <fullName>NotifyOnError__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Notify the owner about bot errors by email</description>
    <inlineHelpText>Notify the owner about bot errors by email</inlineHelpText>
    <label>Notify On Error</label>
    <type>Checkbox</type>
</CustomField>