src/main/default/objects/Bot__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Unique bot token</description>
    <inlineHelpText>Unique bot token</inlineHelpText>
    <label>Token</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>