src/main/default/objects/Bot__c/fields/TokenHash__c.field-meta.xml
<CustomField>
    <fullName>TokenHash__c</fullName>
    <description>Bot token hash value</description>
    <externalId>true</externalId>
    <inlineHelpText>Bot token hash value</inlineHelpText>
    <label>Token Hash</label>
    <length>80</length>
    <type>Text</type>
</CustomField>