src/main/default/objects/Bot__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Bot type (e.g. Telegram, WhatsApp)</description>
    <inlineHelpText>Bot type (e.g. Telegram, WhatsApp)</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telegram</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>