src/main/default/objects/Bot__c/fields/WebhookEvents__c.field-meta.xml
<CustomField>
    <fullName>WebhookEvents__c</fullName>
    <description>The webhook events to be handled by the bot. For example, if you select only &quot;Message&quot; then the bot will be able to handle only new incoming messages and nothing else</description>
    <inlineHelpText>The webhook events to be handled by the bot. For example, if you select only &quot;Message&quot; then the bot will be able to handle only new incoming messages and nothing else</inlineHelpText>
    <label>Webhook Events</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>callback_query</fullName>
                <label>Callback Query</label>
            </value>
            <value>
                <fullName>channel_post</fullName>
                <label>Channel Post</label>
            </value>
            <value>
                <fullName>chat_join_request</fullName>
                <label>Chat Join Request</label>
            </value>
            <value>
                <fullName>chat_member</fullName>
                <label>Chat Member</label>
            </value>
            <value>
                <fullName>chosen_inline_result</fullName>
                <label>Chosen Inline Result</label>
            </value>
            <value>
                <fullName>delivered</fullName>
                <label>Delivered</label>
            </value>
            <value>
                <fullName>edited_channel_post</fullName>
                <label>Edited Channel Post</label>
            </value>
            <value>
                <fullName>edited_message</fullName>
                <label>Edited Message</label>
            </value>
            <value>
                <fullName>failed</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>inline_query</fullName>
                <label>Inline Query</label>
            </value>
            <value>
                <fullName>message</fullName>
                <label>Message</label>
            </value>
            <value>
                <fullName>my_chat_member</fullName>
                <label>My Chat Member</label>
            </value>
            <value>
                <fullName>poll</fullName>
                <label>Poll</label>
            </value>
            <value>
                <fullName>poll_answer</fullName>
                <label>Poll Answer</label>
            </value>
            <value>
                <fullName>seen</fullName>
                <label>Seen</label>
            </value>
            <value>
                <fullName>subscribed</fullName>
                <label>Subscribed</label>
            </value>
            <value>
                <fullName>unsubscribed</fullName>
                <label>Unsubscribed</label>
            </value>
            <value>
                <fullName>webhook</fullName>
                <label>Webhook</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>