src/main/default/objects/Bot__c/fields/WebHookUrl__c.field-meta.xml
<CustomField>
    <fullName>WebHookUrl__c</fullName>
    <description>Bot server webhook url</description>
    <inlineHelpText>Bot server webhook url</inlineHelpText>
    <label>WebHook Url</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>