src/main/default/objects/Bot__c/recordTypes/BaseMessanger.recordType-meta.xml
<RecordType>
    <fullName>BaseMessanger</fullName>
    <active>true</active>
    <description>The general Record Type for the messangers like Telegram, Viber, WhatsApp</description>
    <label>Base Messanger</label>
</RecordType>