src/main/default/objects/Bot__c/recordTypes/BaseMessenger.recordType-meta.xml
<RecordType>
    <fullName>BaseMessenger</fullName>
    <active>true</active>
    <description>The general Record Type for the messengers like Telegram, Viber, WhatsApp</description>
    <label>Base Messenger</label>
</RecordType>