src/main/default/objects/Bot__c/validationRules/RestrictFieldsUpdate.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictFieldsUpdate</fullName>
    <active>true</active>
    <description>Prevents the user from updating such fields as Token__c and Type__c</description>
    <errorConditionFormula>NOT(ISNEW())
&amp;&amp; (
  ISCHANGED(Token__c)
  || ISCHANGED(TokenHash__c)
  || ISCHANGED(Type__c)
)</errorConditionFormula>
    <errorMessage>It&apos;s forbidden to update such fields as Token and Type. Delete and create a new Bot record instead</errorMessage>
</ValidationRule>