src/main/default/objects/Bot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Handler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>